# agente_citas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  run.py
docs/: ANALISIS_ESTADO_Y_MEJORAS.md  API.md  ARCHITECTURE.md  CHECKPOINTER.md  CLI_SCAFFOLDER.md  CONFIGURACION.md  DEPLOYMENT.md  MEMORY_PROFILE.md  METRICS.md  PENDIENTES.md  PERSONALIZAR.md  REVISION_AGENT_CITAS.md  SANDBOX_API.md  analis.md  analisis_tecnico.md  cambios_solid2_c1.md  error-handling.md  formato_futuro.md  memory-management.md
docs/design/: CHECKPOINTER.md  INTERNALS.md  PERSONALIZAR.md
src/citas/: __init__.py  logger.py  main.py  metrics.py  schemas.py  validation.py
src/citas/agent/: __init__.py  _cache.py  _llm.py  agent.py  content.py  context.py  middleware.py
src/citas/config/: __init__.py  circuit_breakers.py  config.py  models.py
src/citas/infra/: __init__.py  _resilience.py  circuit_breaker.py  http_client.py
src/citas/prompts/: __init__.py  citas_system.j2
src/citas/services/: __init__.py  _resilience.py  availability_client.py  booking.py  busqueda_productos.py  circuit_breaker.py  contexto_negocio.py  horario_cache.py  horario_reuniones.py  http_client.py  preguntas_frecuentes.py  productos_servicios_citas.py  schedule_recommender.py  schedule_validator.py  time_parser.py
src/citas/tool/: __init__.py  tools.py  validation.py
test/: README.md  conftest.py
test/integration/: test_agent.py  test_api.py
test/unit/: test_cache.py  test_config.py  test_content.py  test_middleware.py  test_validation.py
(+25 files in other folders)
