[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citas"
version = "2.5.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "openai==2.26.0",
    "langchain==1.2.10",
    "langchain-core==1.2.17",
    "langchain-openai==1.1.10",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.0.10",
    "langgraph-checkpoint==4.0.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "jinja2==3.1.6",
    "prometheus-client==0.24.1",
    "cachetools==7.0.3",
    "tenacity==9.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/citas"]
